@@ -16,10 +16,8 @@
 // English (Australia) resources
 
 #if !defined(AFX_RESOURCE_DLL) || defined(AFX_TARG_ENA)
-#ifdef _WIN32
 LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_AUS
 #pragma code_page(1252)
-#endif //_WIN32
 
 #ifdef APSTUDIO_INVOKED
 /////////////////////////////////////////////////////////////////////////////
@@ -62,7 +60,7 @@ IDI_BLACK               ICON                    "resources\\black.ico"
 // Menu
 //
 
-IDR_MAINWND MENU 
+IDR_MAINWND MENU
 BEGIN
     POPUP "&Hacker"
     BEGIN
@@ -150,7 +148,7 @@ BEGIN
     END
 END
 
-IDR_THREAD MENU 
+IDR_THREAD MENU
 BEGIN
     POPUP "Thread"
     BEGIN
@@ -189,7 +187,7 @@ BEGIN
     END
 END
 
-IDR_HANDLE MENU 
+IDR_HANDLE MENU
 BEGIN
     POPUP "Handle"
     BEGIN
@@ -202,7 +200,7 @@ BEGIN
     END
 END
 
-IDR_MODULE MENU 
+IDR_MODULE MENU
 BEGIN
     POPUP "Module"
     BEGIN
@@ -216,7 +214,7 @@ BEGIN
     END
 END
 
-IDR_COMPUTER MENU 
+IDR_COMPUTER MENU
 BEGIN
     POPUP "Computer"
     BEGIN
@@ -232,7 +230,7 @@ BEGIN
     END
 END
 
-IDR_PROCESS MENU 
+IDR_PROCESS MENU
 BEGIN
     POPUP "Process"
     BEGIN
@@ -289,7 +287,7 @@ BEGIN
     END
 END
 
-IDR_SERVICE MENU 
+IDR_SERVICE MENU
 BEGIN
     POPUP "Service"
     BEGIN
@@ -305,7 +303,7 @@ BEGIN
     END
 END
 
-IDR_PRIVILEGE MENU 
+IDR_PRIVILEGE MENU
 BEGIN
     POPUP "Privilege"
     BEGIN
@@ -317,7 +315,7 @@ BEGIN
     END
 END
 
-IDR_FINDOBJ MENU 
+IDR_FINDOBJ MENU
 BEGIN
     POPUP "Object"
     BEGIN
@@ -329,7 +327,7 @@ BEGIN
     END
 END
 
-IDR_USER MENU 
+IDR_USER MENU
 BEGIN
     POPUP "User"
     BEGIN
@@ -341,7 +339,7 @@ BEGIN
     END
 END
 
-IDR_NETWORK MENU 
+IDR_NETWORK MENU
 BEGIN
     POPUP "Network"
     BEGIN
@@ -353,7 +351,7 @@ BEGIN
     END
 END
 
-IDR_ICON MENU 
+IDR_ICON MENU
 BEGIN
     POPUP "Icon"
     BEGIN
@@ -392,7 +390,7 @@ BEGIN
     END
 END
 
-IDR_PROCESSHEADER MENU 
+IDR_PROCESSHEADER MENU
 BEGIN
     POPUP "Header"
     BEGIN
@@ -400,7 +398,7 @@ BEGIN
     END
 END
 
-IDR_MEMORY MENU 
+IDR_MEMORY MENU
 BEGIN
     POPUP "Memory"
     BEGIN
@@ -415,7 +413,7 @@ BEGIN
     END
 END
 
-IDR_MEMFILTER MENU 
+IDR_MEMFILTER MENU
 BEGIN
     POPUP "Filter"
     BEGIN
@@ -1534,7 +1532,7 @@ END
 //
 
 #ifdef APSTUDIO_INVOKED
-GUIDELINES DESIGNINFO 
+GUIDELINES DESIGNINFO
 BEGIN
     IDD_PROCGENERAL, DIALOG
     BEGIN
@@ -1984,7 +1982,7 @@ END
 // Accelerator
 //
 
-IDR_MAINWND_ACCEL ACCELERATORS 
+IDR_MAINWND_ACCEL ACCELERATORS
 BEGIN
     VK_ESCAPE,      ID_ESC_EXIT,            VIRTKEY, NOINVERT
     "F",            ID_HACKER_FINDHANDLESORDLLS, VIRTKEY, CONTROL, NOINVERT
